--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -35,11 +35,13 @@
     "enquire.js": "^2.1.6",
     "history": "^5.0.0",
     "ini": "1.3.6",
+    "jquery": "3.6.0",
     "jwt-decode": "^3.0.0-beta.2",
-    "lodash": "^4.17.20",
+    "lodash": "4.17.21",
     "lodash-decorators": "^6.0.0",
     "merge-deep": "3.0.3",
     "moment": "^2.29.0",
+    "node-notifier": "9.0.0",
     "object-path": "0.11.5",
     "path-to-regexp": "^6.1.0",
     "rc-drawer": "^4.1.0",
@@ -51,7 +53,12 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "snowsql-formatter": "1.1.0"
+    "snowsql-formatter": "1.1.0",
+    "url-parse": "1.5.0",
+    "y18n": "5.0.8"
+  },
+  "resolutions": {
+    "react-script/resolve-url-loader/object-path": "0.11.5"
   },
   "scripts": {
     "build-ts": "react-scripts build",
