--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -67,6 +67,9 @@ ignore_missing_imports = True
 [mypy-aioboto3.*]
 ignore_missing_imports = True
 
+[mypy-aiobotocore.*]
+ignore_missing_imports = True
+
 [mypy-xmltodict.*]
 ignore_missing_imports = True
 
