--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,14 +32,20 @@ jobs:
           name: run static analysis
           command: |
             cd src
+
             MYPYPATH="`pwd`/webui/backend/" \
-              .venv/bin/mypy --config-file mypy.ini \
+              .venv/bin/mypy \
+                --install-types \
+                --non-interactive \
+                --config-file mypy.ini \
                  ./runners \
                  ./scripts \
                  ./webui/backend/webui \
                  ./connectors \
                  ./../infra/terraform/external_function/snowalert/lambda-code
+
             .venv/bin/pytest -vv
+
             ./scripts/run-whitesource
 
 workflows:
