--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -16,6 +16,9 @@ ignore_missing_imports = True
 [mypy-cryptography.*]
 ignore_missing_imports = True
 
+[mypy-demjson.*]
+ignore_missing_imports = True
+
 [mypy-snowflake.*]
 ignore_missing_imports = True
 
