--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -88,6 +88,9 @@
     "tslint-react": "^5.0.0",
     "typescript": "^4.0.3"
   },
+  "resolutions": { 
+    "**/@svgr/plugin-svgo/svgo/css-select": "^4.0.0" 
+  },
   "browserslist": {
     "production": [
       ">0.2%",
