--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -89,7 +89,7 @@
     "typescript": "^4.0.3"
   },
   "resolutions": {
-    "**/@svgr/plugin-svgo/svgo/css-select": "^4.0.0"
+    "react-scripts/**/@svgr/plugin-svgo/svgo/css-select": "^4.0.0"
   },
   "browserslist": {
     "production": [
