--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -75,7 +75,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "react-app-rewired": "^2.1.5",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^5.0.0",
     "redux-devtools-extension": "^2.13.7",
     "source-map-explorer": "^2.5.0",
     "style-loader": "^1.1.3",
@@ -87,6 +87,9 @@
     "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^5.0.0",
     "typescript": "^4.0.3"
+  },
+  "resolutions": {
+    "react-scripts/**/@svgr/plugin-svgo/svgo/css-select": "^4.0.0"
   },
   "browserslist": {
     "production": [
