--- a/Dockerfile.snowalert
+++ b/Dockerfile.snowalert
@@ -1,16 +1,8 @@
-FROM python:3.9-slim-bookworm
+FROM python:3.12-bookworm
 
 WORKDIR /var/task
 
 RUN apt-get update
-
-# https://repost.aws/questions/QUCFqv7OfoQlygJrmwfkJ24Q/various-aws-apis-fail-due-to-timeout
-RUN apt-get install --reinstall -y iptables
-RUN update-alternatives --set iptables /usr/sbin/iptables-legacy
-RUN update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
-
-RUN apt-get install -y r-base
-RUN R -e "install.packages(c('dplyr', 'purrr', 'tidyr','MASS', 'tidyverse', 'broom','testthat'), repos = 'https://cloud.r-project.org')"
 
 RUN pip install --upgrade pip virtualenv pyflakes
 
