--- a/Dockerfile.snowalert
+++ b/Dockerfile.snowalert
@@ -19,4 +19,4 @@ COPY ./install ./install
 RUN PYTHONPATH='' pip install ./snowalert/src/
 RUN PYTHONPATH='' pip install requests
 
-CMD ./run all
+CMD ./run all && sleep 300
